<resources>
    <string name="app_name">FinTrack</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="add">Add</string>
    <string name="update_expense_title">Update Expense</string>
    <string name="category_delete_title">Important</string>
    <string name="category_delete_description">By deleting a category you will delete all expenses with this category, are you sure?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="empty_category_title">No category found!</string>
    <string name="empty_category_description">Please create a new one</string>
    <string name="create">create</string>
    <string name="total_expenses">Total expenses</string>
    <string name="select_the_category_icon">Select the category icon</string>
    <string name="create_category">Create Category</string>
    <string name="category_name_ex_creditcard">Category name: ex: Credit Card</string>
    <string name="select_the_category_color">Select the category color</string>
    <string name="category_icon">Category Icon</string>
    <string name="value_total_expenses">R$ %1$.2f</string>
    <string name="button_to_add_new_expenses">Button to add new expenses</string>
    <string name="expense_amount_ex_100_50">Expense amount. Ex: 100.50</string>
    <string name="expense_name_ex_energy_bill">Expense name. Ex: Energy Bill</string>
    <string name="logo_app_fintrack">logo app FinTrack</string>
    <string name="clickable_icon_of_a_car">Clicable icon of a car</string>
    <string name="clickable_icon_of_a_t_shirt">clickable icon of a t-shirt</string>
    <string name="clickable_credit_card_icon">clickable credit card icon</string>
    <string name="clickable_icon_of_lightning">clickable icon of lightning</string>
    <string name="clickable_icon_of_a_video_game_control">clickable icon of a video game control</string>
    <string name="clickable_icon_of_a_gas_station_pump">clickable icon of a gas station pump</string>
    <string name="clickable_icon_of_a_growing_chart">clickable icon of a growing chart</string>
    <string name="clickable_icon_of_a_house">clickable icon of a house</string>
    <string name="clickable_key_icon">clickable key icon</string>
    <string name="clickable_icon_of_a_supermarket_cart">clickable icon of a supermarket cart</string>
    <string name="clickable_icon_of_a_drop_of_water">clickable icon of a drop of water</string>
    <string name="wifi_s_clickable_icon">WiFi\'s clickable icon</string>
    <string name="menu">Menu</string>
    <string name="arrow_to_go_back_to_the_previous_screen">arrow to go back to the previous screen</string>
    <string name="save_chart">save chart</string>
    <string name="arrow_to_go_back_to_previous_page">Arrow to go back to previous page</string>
    <string name="select_the_date">Select the date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_15_days">Last 15 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="this_month">This Month</string>
    <string name="all">All</string>
    <string name="select_the_start_date">Select the start date</string>
    <string name="select_the_end_date">Select the end date</string>
</resources>