<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_expense_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_expense_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_expense_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Expense name: ex: Energy Bill"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_expense_delete"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:text="@string/delete" />


        <Button
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:id="@+id/btn_expense_create_or_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>