<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/create_category"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_name_ex_creditcard"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_the_category_icon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/category_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:columnCount="4"
            android:orientation="horizontal"
            android:rowCount="4">

            <ImageView
                android:id="@+id/icon_car"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_car" />

            <ImageView
                android:id="@+id/icon_clothes"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_clothes" />

            <ImageView
                android:id="@+id/icon_credit_card"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_credit_card" />

            <ImageView
                android:id="@+id/icon_eletricity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_electricity" />

            <ImageView
                android:id="@+id/icon_game_control"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_game_control" />

            <ImageView
                android:id="@+id/icon_gas_station"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_gas_station" />

            <ImageView
                android:id="@+id/icon_graphic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_graphic" />

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_home" />

            <ImageView
                android:id="@+id/icon_key"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_key" />

            <ImageView
                android:id="@+id/icon_shopping"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_shopping_cart" />

            <ImageView
                android:id="@+id/icon_water_drop"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_water_drop" />

            <ImageView
                android:id="@+id/icon_wifi"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_wifi" />

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_the_category_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/color_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:columnCount="4"
            android:orientation="horizontal">

            <View
                android:id="@+id/color_white"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_white" />

            <View
                android:id="@+id/color_black"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_black" />

            <View
                android:id="@+id/color_brown"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_brown" />

            <View
                android:id="@+id/color_blue"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_blue" />

            <View
                android:id="@+id/color_red"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_red" />

            <View
                android:id="@+id/color_green"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_green" />

            <View
                android:id="@+id/color_grey"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_grey" />

            <View
                android:id="@+id/color_pink"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_pink" />

            <View
                android:id="@+id/color_violet"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_violet" />

            <View
                android:id="@+id/color_purple"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_purple" />

            <View
                android:id="@+id/color_yellow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_yellow" />

            <View
                android:id="@+id/color_water_green"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_water_green" />

            <View
                android:id="@+id/color_orange"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_orange" />

            <View
                android:id="@+id/color_light_yellow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_light_yellow" />

            <View
                android:id="@+id/color_light_orange"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_light_orange" />

            <View
                android:id="@+id/color_ocean_blue"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_ocean_blue" />

        </GridLayout>

        <Button
            android:id="@+id/btn_category_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/create" />

    </LinearLayout>

</ScrollView>